--- a/nb/generate_linear_divergence_mesh.ipynb
+++ b/nb/generate_linear_divergence_mesh.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/forero/anaconda3/envs/nbodykit-env/lib/python3.7/site-packages/nbodykit/extern/docrep.py:412: MatplotlibDeprecationWarning: \n",
+      "The dedent function was deprecated in Matplotlib 3.1 and will be removed in 3.3. Use inspect.cleandoc instead.\n",
+      "  s = dedents(s)\n",
+      "/Users/forero/anaconda3/envs/nbodykit-env/lib/python3.7/site-packages/nbodykit/extern/docrep.py:341: MatplotlibDeprecationWarning: \n",
+      "The dedent function was deprecated in Matplotlib 3.1 and will be removed in 3.3. Use inspect.cleandoc instead.\n",
+      "  s = dedents('\\n' + '\\n'.join(lines[first:]))\n"
+     ]
+    }
+   ],
    "source": [
     "from nbodykit.lab import LinearMesh, cosmology, FFTPower\n",
     "from matplotlib import pyplot as plt\n",
@@ -18,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +53,29 @@
     "    h5f.create_dataset('divergence', data=divergence)\n",
     "    h5f.close()\n",
     "    print(\"Finished writing to {}\".format(output_filename))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished writing to mock_divergence_mesh_360_box_720_slim_20.h5\n",
+      "Finished writing to mock_divergence_mesh_360_box_720_slim_14.h5\n",
+      "Finished writing to mock_divergence_mesh_360_box_720_slim_10.h5\n",
+      "Finished writing to mock_divergence_mesh_360_box_720_slim_6.h5\n",
+      "Finished writing to mock_divergence_mesh_360_box_720_slim_2.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "klim_list = [1/20.0,1.0/14.0,1.0/10.0, 1.0/6.0, 1.0/2.0]\n",
+    "for klim in klim_list:\n",
+    "    generate_divergence(Nmesh=360, BoxSize=720, klim=klim)"
    ]
   },
   {
