--- a/nb/power_spectrum.ipynb
+++ b/nb/power_spectrum.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -472,6 +472,15 @@
     "plt.xlabel(r\"R$_s$ [$\\mathrm{Mpc}\\ h^{-1}$]\")\n",
     "plt.ylabel(r\"R$_c$ [$\\mathrm{Mpc}\\ h^{-1}$]\")\n",
     "plt.savefig(\"correlation_length.pdf\", bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://cluster-toolkit.readthedocs.io/en/latest/source/correlation_functions.html"
    ]
   },
   {
