--- a/nb/generate_linear_divergence_mesh.ipynb
+++ b/nb/generate_linear_divergence_mesh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +40,27 @@
     "    h5f.create_dataset('divergence', data=divergence)\n",
     "    h5f.close()\n",
     "    print(\"Finished writing to {}\".format(output_filename))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-35.2150910460585\n"
+     ]
+    }
+   ],
+   "source": [
+    "cosmo = cosmology.Planck15\n",
+    "Plin = cosmology.LinearPower(cosmo, redshift=0, transfer='NoWiggleEisensteinHu')\n",
+    "f = cosmo.scale_independent_growth_rate(0.0)\n",
+    "100 * cosmo.h\n",
+    "print(-100 * cosmo.h * f )"
    ]
   },
   {
